--- a/r_Rmd/April 2022.Rmd
+++ b/r_Rmd/April 2022.Rmd
@@ -200,26 +200,57 @@ ed %>%
 ```{r d7-setup, include = FALSE}
 p_load(owidR, rnaturalearth)
 
-owid_search("terror")
+# owid_search("terror")
 
 terror <- owid("terrorist-attacks-by-region") %>% 
-  clean_names() %>% 
+  clean_names() %>% view()
   group_by(code) %>% 
   count()
 
 world <- ne_countries(returnclass = "sf") %>% 
   left_join(terror, by = c("iso_a3" = "code"))
-
-
-world %>% 
-  ggplot() + 
-  geom_sf(aes(fill = n), color = "white", size = 0.25) + 
-#  coord_sf()
-  lims(x = c(-30, 50), y = c(30, 80)) + 
-  theme_void()
 ```
 
 
+```{r d7-plot, include = TRUE}
+world %>% 
+  ggplot() + 
+  geom_sf(aes(fill = n), color = "white", size = 0.1) + 
+  paletteer::scale_fill_paletteer_c("grDevices::Fall") +
+  lims(x = c(-30, 50), y = c(30, 80)) + 
+  theme_void() +
+  labs(title = "Number of Terrorist Attack From 1970 - 2017: Europe ") + 
+  theme(plot.title.position = "plot")
+```
+
+# Day 8: Mountains
+
+```{r d8-setup, include = FALSE}
+mtns <- tibble::tribble(
+       ~continent,        ~peak,   ~height_m,        ~mountain_range,     ~countries,
+         "Africa",       "Kibo", "5895",          "Kilimanjaro",     "Tanzania",
+           "Asia",    "Everest", "8848",            "Himalayas", "Nepal, China",
+     "Antarctica",     "Vinson", "4892",       "Sentinel Range",            "-",
+      "Australia", "Kosciuszko", "2228", "Great Dividing Range",    "Australia",
+         "Europe",     "Elbrus", "5642",   "Caucasus Mountains",       "Russia",
+  "North America",     "Denali", "6190",         "Alaska Range", "USA (Alaska)",
+  "South America",  "Aconcagua", "6962",                "Andes",    "Argentina"
+  ) %>% 
+  mutate(height_m = parse_number(height_m),
+         continent = fct_reorder(continent, height_m),
+         sign = paste0(peak, "\n", height_m, "m"))
+
+```
+
+```{r d8-plot, include = TRUE}
+mtns %>% 
+  ggplot(aes(continent, height_m)) + 
+  geom_segment(aes(x = continent, xend = continent,
+                   y = 0, yend = height_m)) + 
+  geom_label(aes(label = sign), label.r = unit(0.05, "lines")) + 
+  scale_y_continuous(limits = c(0, 9000), labels = scales::comma_format(suffix = " m")) + 
+  labs(x = NULL, y = NULL)
+```
 
 ```{r knit-exit, include = FALSE}
 knitr::knit_exit()
