--- a/r_Rmd/April 2022.Rmd
+++ b/r_Rmd/April 2022.Rmd
@@ -318,6 +318,38 @@ planets %>%
 knitr::knit_exit()
 ```
 
+
+# Day 13: Correlation
+
+I'm going to check out the [{lterdatasampler} package](https://lter.github.io/lterdatasampler/).
+
+```{r d13-setup, include = FALSE}
+p_load(lterdatasampler, ggtext)
+
+hbr_maples <- hbr_maples %>% 
+  mutate(year = as.factor(year))
+
+```
+
+```{r d13-plot, include = TRUE}
+hbr_maples %>% 
+  ggplot(aes(stem_length, stem_dry_mass, group = year)) + 
+  geom_point(aes(fill = year), shape = 21, show.legend = FALSE) + 
+  geom_smooth(aes(color = year), method = "lm", se = FALSE, show.legend = FALSE) + 
+  labs(x = "Stem Length (mm)", y = "Stem Mass (g)", 
+       title = "The correlation between Stem Mass and Stem Length Differs between <span style = 'color:#624FB0;'>2003</span> and <span style = 'color:#86A556;'>2004</span>.",
+       subtitle = "**Sugar Maple Seedlings** in *Hubbard Brook LTER*.",
+       caption = "Data Source: **{lterdatasampler}**") + 
+  paletteer::scale_fill_paletteer_d("rockthemes::husker", direction = -1) + 
+  paletteer::scale_color_paletteer_d("rockthemes::husker", direction = -1) + 
+  ggthemes::theme_pander() + 
+  theme(legend.title = element_blank(), 
+        plot.title.position = "plot", 
+        plot.title = element_markdown(), 
+        plot.subtitle = element_markdown(size = 10), 
+        plot.caption = element_markdown())
+```
+
 # Extra Stuff
 template, {rprojroot}, {rgbif}, {geoviz}, {ggmap}, {rayvista}, {camcorder}, {rayvertex}, {pwr}, {reprex}, debug = T for geom_text, {lcmm}, {rolldown}, {muvr}, {pcalg}, {packagemetrics}, {steveproj}, {ungeviz}, {themis}, {prettydoc}, {annotate}, {printy}, {roughsf}, {colorspace}, {monochromeR}, {colorblindr}, {echarts4r}, {ggtext}
 
