--- a/r_Rmd/April 2022.Rmd
+++ b/r_Rmd/April 2022.Rmd
@@ -404,7 +404,7 @@ smoking <- health %>%
 
 ```
 
-```{r d18-table, include = TRUE}
+```{r d18-table, include = FALSE}
 p_load(gt, gtExtras)
 
 smoking_2019 <- smoking %>% 
@@ -439,17 +439,18 @@ smoking %>%
   select(-group) %>% 
   rename(Country = country, Trend = smk_data) %>% 
   relocate(Trend, .after = Total) %>% 
+  arrange(-Total) %>% 
   gt() %>% 
   gt_merge_stack(Country, flag) %>% 
-  tab_spanner(columns = c("Women", "Men", "Total"), label = "2019 Smoking Rates") %>% 
+  tab_spanner(columns = c("Women", "Men", "Total"), label = "2019 Smoking Rates (%)") %>% 
   gt_sparkline(Trend, 
                range_colors = c("#2E5A87", "#A90C38"),
                line_color = "gray", 
-               width = 15)
+               width = 15) %>% 
+  cols_align(columns = c("Women", "Men", "Total"), align = "center") %>% 
+  gt_theme_538()
 
 
-  
-  
 ```
 
 # Extra Stuff
