--- a/r_Rmd/May 2022.qmd
+++ b/r_Rmd/May 2022.qmd
@@ -117,6 +117,24 @@ ray_pkgs <- package_list_metrics(c("raymolecule", "rayrender", "rayshader", "ray
 metrics_table(ray_pkgs)
 ```
 
+# #TidyTuesdayR || New York Time's Bestsellers
+
+```{r tt-setup-0510}
+#| include: false
+
+library(tidytuesdayR)
+
+tt <- tt_load("2022-05-10", download_files = "nyt_titles.tsv")
+
+tt_raw <- tt$nyt_titles
+
+nyt <- tt_raw %>% 
+  mutate(author = str_trim(author),
+         author = str_remove(author, '[!?\\"]'),
+         author = str_replace(author, "^ by ", ""))
+
+```
+
 
 ```{r end-knit, include = FALSE}
 knitr::knit_exit()
